hphp/hack/test/typecheck/references/strict_foreach_reference1.php
<?hh // strict

function test(array<int> $arr): void {
  foreach ($arr as &$x) {
    $x = 0;
  }
}
